# ros-playground

./: .gitignore  README.md  compile_commands.json
.colcon/: defaults.yaml
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: pub_function.cpp  sub_function.cpp
src/hello_package/: CMakeLists.txt  package.xml
src/hello_package/src/: hello_node.cpp
src/warehouse_pkg/: CMakeLists.txt  README.md  package.xml
src/warehouse_pkg/action/: RobotTask.action
src/warehouse_pkg/launch/: warehouse_launch.py
src/warehouse_pkg/msg/: IDPose2D.msg  RobotStatusMonitor.msg
src/warehouse_pkg/src/: fleet_manager.cpp  robot_navigator.cpp  telemetry_monitor.cpp
src/warehouse_pkg/srv/: GetBayNumber.srv
